footer mq nesting fix

--- a/Frontend/src/assets/styles/cmps/_InvoiceModal.scss
+++ b/Frontend/src/assets/styles/cmps/_InvoiceModal.scss
@@ -22,6 +22,8 @@
                 align-self: center;
 
                 .dot {
+                    margin: 0;
+
                     i {
                         align-self: flex-end;
                         cursor: default;
