--- a/Frontend/src/assets/styles/cmps/_GigPreview.scss
+++ b/Frontend/src/assets/styles/cmps/_GigPreview.scss
@@ -56,7 +56,6 @@
   }
 
   .gig-price {
-    display: flex;
     align-items: center;
     justify-content: space-between;
     margin-block-start: 0.5em;
@@ -70,97 +69,117 @@
 }
 
 .mobile-gig-preview {
-  position: relative;
-  grid-template-columns: repeat(5, 1fr);
   border-radius: 0.5em;
   box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.15), -2px 2px 5px rgba(0, 0, 0, 0.15),
     0 2px 5px rgba(0, 0, 0, 0.15), 0 -2px 5px rgba(0, 0, 0, 0.15);
+  position: relative;
 
-  .level {
-    position: absolute;
-    padding: 0 0.5em;
-    font-weight: 600;
-    border-radius: 4px;
-    margin-inline-start: auto;
-    top: 6%;
-    left: 2%;
+  .gig-preview-content {
+    grid-template-columns: repeat(5, 1fr);
 
-    &.pro {
-      color: $clrPrimary1;
-      background: $clr17;
+    &:hover {
+      text-decoration: none;
     }
-  }
 
-  .heart {
-    position: absolute;
-    background: none;
-    right: rem(10px);
-    top: rem(13.5px);
-    cursor: pointer;
-    user-select: none;
-  }
+    .level {
+      position: absolute;
+      padding: 0 0.5em;
+      font-weight: 600;
+      border-radius: 4px;
+      margin-inline-start: auto;
+      top: 6%;
+      left: 2%;
+      align-items: center;
+      gap: 0.25em;
 
-  img {
-    border-radius: 0.5em 0 0 0.5em;
-    grid-column: 1 / 3;
-    height: 100%;
-    aspect-ratio: 1.5/1;
-    object-fit: cover;
-    background: $clrSecondary5;
-  }
+      &[data-level="Pro Talent"] {
+        color: $clrPrimary1;
+        background-color: $clr17;
+      }
 
-  .mobile-preview-body {
-    grid-column: 3 / -1;
+      &[data-level="New Seller"] {
+        color: $clrPrimary1;
+        background-color: $bgColor5;
+      }
 
-    .user-mobile-preview {
-      padding: 0.75em;
-      width: 100%;
+      i {
+        svg {
+          width: 18px;
+          height: 18px;
+        }
+      }
+    }
 
-      .user-rating-order {
+    .heart {
+      position: absolute;
+      background: none;
+      right: rem(10px);
+      top: rem(13.5px);
+      cursor: pointer;
+      user-select: none;
+    }
+
+    img {
+      border-radius: 0.5em 0 0 0.5em;
+      grid-column: 1 / 3;
+      height: 100%;
+      aspect-ratio: 1.5/1;
+      object-fit: cover;
+      background: $clrSecondary5;
+    }
+
+    .mobile-preview-body {
+      grid-column: 3 / -1;
+
+      .user-mobile-preview {
+        padding: 0.75em;
         width: 100%;
-        gap: 0.75em;
-        flex-direction: row;
-        align-items: center;
-        align-self: start;
 
-        i {
-          margin-block-end: 4px;
-        }
+        .user-rating-order {
+          width: 100%;
+          gap: 0.75em;
+          flex-direction: row;
+          align-items: center;
+          align-self: start;
 
-        .rating-score {
-          align-items: baseline;
-          font-size: 1.1em;
-
-          .rate {
-            padding: 0 0.25em;
+          i {
+            margin-block-end: 4px;
           }
 
-          .rate-count {
+          .rating-score {
+            align-items: baseline;
+            font-size: 1.1em;
+
+            .rate {
+              padding: 0 0.25em;
+            }
+
+            .rate-count {
+              color: $clrSecondary5;
+              font-size: 0.85em;
+            }
+          }
+        }
+
+        .gig-title {
+          display: block;
+          overflow: hidden;
+          text-overflow: ellipsis;
+          line-height: 1.2;
+          max-height: 2.4em;
+          margin: 0.5em 0 1em 0;
+        }
+
+        .gig-price {
+          align-self: end;
+          text-align: right;
+          display: block;
+
+          .from {
+            font-size: 0.75em;
             color: $clrSecondary5;
-            text-decoration: underline;
-            font-size: 0.85em;
+            margin-inline-end: 0.5em;
           }
-        }
-      }
-
-      .gig-title {
-        display: block;
-        overflow: hidden;
-        text-overflow: ellipsis;
-        line-height: 1.2;
-        max-height: 2.4em;
-        margin: 0.5em 0 1em 0;
-      }
-
-      .gig-price {
-        align-self: end;
-        text-align: right;
-        display: block;
-
-        .from {
-          font-size: 0.75em;
-          color: $clrSecondary5;
-          margin-inline-end: 0.5em;
         }
       }
     }
