--- a/Frontend/src/assets/styles/setup/_mq.scss
+++ b/Frontend/src/assets/styles/setup/_mq.scss
@@ -1094,6 +1094,10 @@
     .unselected-chat {
       display: none;
     }
+
+    .chats-nav {
+      width: 100%;
+    }
   }
 
   @media (min-width: 601px) {
