--- a/Frontend/src/assets/styles/cmps/_UserChat.scss
+++ b/Frontend/src/assets/styles/cmps/_UserChat.scss
@@ -14,6 +14,7 @@
     border: 1px solid $clrSecondary3;
     max-height: 781px;
   }
+
   &:not(.chat-page) {
     .chat-box {
       .chat-box-container {
@@ -60,11 +61,12 @@
           border-radius: 50%;
           object-fit: cover;
         }
+
         &.notification::after {
           content: '';
           position: absolute;
-          bottom: 10px;
-          right: 15px;
+          bottom: 0;
+          right: 0;
           width: 12px;
           height: 12px;
           background-color: $clr9;
